--- a/src/Shared/Modules/BlazorBoilerplate.Theme.Material.Demo/Pages/Index.razor
+++ b/src/Shared/Modules/BlazorBoilerplate.Theme.Material.Demo/Pages/Index.razor
@@ -28,13 +28,6 @@
     The repo is moving along... it takes time to build as I am often contributing to <a href="https://github.com/SamProf/MatBlazor" target="_blank">MatBlazor</a> as well to obtain UI changes that are needed for the theme.
     With more support each project can grow faster. Please contribute, or at minimum star the repositories on Github
 </p>
-<p>
-    <DonateButton /> - Help support this repo / code and hosting costs.
-    Other devs are charging $30 - $1500 to download their code with similar functionality.
-</p>
-<p>
-    <MatButton Link="https://github.com/enkodellc/blazorboilerplate"><i class="fa fa-github" aria-hidden="true"></i>&nbsp;  Github Repository / Contribute</MatButton>- Contribute to this repo to help it grow!
-</p>
 <hr />
 <h2>Authorization / Identity</h2>
 <p>
@@ -101,18 +94,7 @@
 <hr />
 <h3> Disclaimer / About the Author</h3>
 <p>
-    I (Enkodellc) started this repository as I was frustrated with the examples out there that people were charging money for and were in my opinion
-    incomplete or closed source. I paid for 4-5 of these solutions and none of them were what I was looking for. This is my
-    attempt to create something that developers can start a Blazor project with several great features to build from.
-    I have a lot of experience with ASP.Net webforms, I am new to .NET Core and Blazor.
-    This code is not meant to be perfect or follow every Best Practice. It though is my ambition to learn and get feedback on what Best Practices
-    can be implemented.
-    I have taken small solutions from other repositories and will do my best to recognize those contributions. I am very open to ideas and
-    suggestions. I am not a great developer, but I try. So please take this into consideration when using this repository.
-</p>
-<p>
-    I am building this because I have a project that will be using this as a framework so my features are what I foresee that project needing. It is re-write of a legacy
-    .Net WebForms project. Please take the time to Star, Contribute or Donate to support my efforts to continue to drive the project, especially if you use it in production.
+   tbdd
 </p>
 
 <MatSnackbar @bind-IsOpen="@lazySnackbarIsOpen">
